--- a/slider_native_js/index.html
+++ b/slider_native_js/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slider.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div class="btn-slider-right">&#10095</div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/slider.js"></script>
 </body>
 
 </html>
