--- a/hamburger_native_js/app/index.html
+++ b/hamburger_native_js/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/hamburger-menu.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <script src="js/script.js"></script>
+    <script src="js/hamburger-menu.js"></script>
 </body>
 
 </html>
